--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-*.js linguist-language=Python
-*.css linguist-language=Python
-*.html linguist-language=Python
+*.js linguist-language=Go
+*.css linguist-language=Go
+*.html linguist-language=Go
+*.md linguist-language=Go
